# msc_simpl

./: .gitignore  CMakeLists.txt  build.sh  bulk.sh
data/: 1.fits  1.tiff  ao_1.tif  ao_1.tif_pt.txt  ao_2.tif  ao_3.tif  ao_4.tif  ao_5.tif  hmi20120616_1336.tiff  hmi20120616_1336_crop.tiff  s.fits  test.bmp_pt.txt
src/: Arc.h  ArcStorage.h  ArcStorage_prev.h  BigDecimal.cpp  BigDecimal.h  Coface.cpp  Coface.h  CofacedEdge.cpp  CofacedEdge.h  CofacedFace.cpp  CofacedFace.h  CofacedTriangle.h  Drawer.h  Edge.cpp  Edge.h  FitsReader.cpp  FitsReader.h  GradientProcessor.cpp  GradientProcessor.h  GradientProcessorQuad.cpp  GradientProcessorQuad.h  Image.cpp  Image.h  MsComplex.cpp  MsComplex.h  MsComplexEditor.cpp  MsComplexEditor.h  MsComplexStorage.cpp  MsComplexStorage.h  Pixel.cpp  Pixel.h  Quad.cpp  Quad.h  Simplex.cpp  Simplex.h  SimplexRelations.cpp  SimplexRelations.h  SimplexStorage.cpp  SimplexStorage.h  Subset.cpp  (+11 more)
src/main/: gradient_msc.cpp
src/persist_pair/: BarCodeProcessor.cpp  BarCodeProcessor.h  PComponent.cpp  PComponent.h  PPoint.cpp  PPoint.h  PPointsRelations.cpp  PPointsRelations.h  PersistPairProcessor.cpp  PersistPairProcessor.h
src/tests/: TestBarCodeProcessor.cpp  TestBigDecimal.cpp  TestPPairProcessor.cpp  TestUnitFace.cpp
src/utils/: generate_image.cpp
tests/: TestPPairProcessor.cpp  TestUnitFace.cpp  TestsMain.cpp
